force-app/main/default/objects/Opportunity/fields/Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Amount__c</fullName>
    <label>Quote Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>