force-app/main/default/objects/Opportunity/fields/Service_Intrested__c.field-meta.xml
<CustomField>
    <fullName>Service_Intrested__c</fullName>
    <label>Service Intrested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Transformation</fullName>
            </value>
            <value>
                <fullName>IT Consulting</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Cloud Consulting</fullName>
            </value>
            <value>
                <fullName>Game Platform Services</fullName>
            </value>
            <value>
                <fullName>CRM Services</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>SaaS Product Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>