force-app/main/default/objects/Opportunity/fields/TrackingNumbers__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumbers__c</fullName>
    <label>Tracking Numbers</label>
    <length>12</length>
    <type>Text</type>
</CustomField>